--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -58,7 +58,7 @@
           </div>
           <div class="col-md-4">
             <div class="content-section">
-              <h3>Sidebar</h3>
+              <h3>Board</h3>
               <p class='text-muted'>You can put any information here you'd like.
                 <ul class="list-group">
                   <li class="list-group-item ab mr-2 border">Latest Posts</li>
